@@ -3,7 +3,13 @@
 
 using namespace std; 
 
-void project() {
+
+void hotCold(tempTrender& lulea, tempTrender& karlstad, tempTrender& boras, tempTrender& falsterbo, tempTrender& falun, tempTrender& lund, tempTrender& soderarm, tempTrender& umea, tempTrender& visby){
+	lund.hotCold();
+}
+
+
+void readData(int choice) {
 	string dataPathLulea = "../datasets/smhi-opendata_Lulea.csv"; 
 	int startingLineLulea = 11;
 	string dataPathKarlstad = "../datasets/smhi-opendata_Karlstad.csv";
@@ -50,6 +56,14 @@ void project() {
 	tempTrender visby(dataPathVisby, startingLineVisby);
 	visby.readDataFile();
 	
-	lund.hotCold();
-
+	switch(choice){
+		case 1 : cout << "Lisas arbete" << endl;
+				 break;
+		case 2 : cout << "Davids arbete" << endl;
+				 break;
+		case 3 : hotCold(lulea, karlstad, boras, falsterbo, falun, lund, soderarm, umea, visby);
+				 break;
+		case 4 : cout << "Alexanders arbete" << endl;
+	}
+	
 }
