@@ -1,4 +1,4 @@
-This is pdfTeX, Version 3.14159265-2.6-1.40.16 (TeX Live 2015/Debian) (preloaded format=pdflatex 2017.9.5)  7 NOV 2017 16:01
+This is pdfTeX, Version 3.14159265-2.6-1.40.16 (TeX Live 2015/Debian) (preloaded format=pdflatex 2017.9.5)  7 NOV 2017 17:20
 entering extended mode
  restricted \write18 enabled.
  %&-line parsing enabled.
@@ -562,7 +562,11 @@ Underfull \hbox (badness 10000) in paragraph at lines 18--19
 File: img/hotColdDays.jpg Graphic file (type jpg)
  <use img/hotColdDays.jpg>
 Package pdftex.def Info: img/hotColdDays.jpg used on input line 24.
-(pdftex.def)             Requested size: 207.0021pt x 132.60898pt.
+(pdftex.def)             Requested size: 413.99895pt x 265.21797pt.
+
+Overfull \hbox (68.99895pt too wide) in paragraph at lines 24--25
+ [][] 
+ []
 
 
 LaTeX Warning: `h' float specifier changed to `ht'.
@@ -586,7 +590,7 @@ public/amsfonts/cm/cmbx12.pfb></usr/share/texlive/texmf-dist/fonts/type1/public
 nts/cm/cmr10.pfb></usr/share/texlive/texmf-dist/fonts/type1/public/amsfonts/cm/
 cmr12.pfb></usr/share/texlive/texmf-dist/fonts/type1/public/amsfonts/cm/cmr17.p
 fb></usr/share/texlive/texmf-dist/fonts/type1/public/amsfonts/cm/cmsy10.pfb>
-Output written on main.pdf (2 pages, 112748 bytes).
+Output written on main.pdf (2 pages, 112747 bytes).
 PDF statistics:
  40 PDF objects out of 1000 (max. 8388607)
  27 compressed objects within 1 object stream
