@@ -1,4 +1,4 @@
-This is pdfTeX, Version 3.14159265-2.6-1.40.16 (TeX Live 2015/Debian) (preloaded format=pdflatex 2017.9.5)  7 NOV 2017 16:06
+This is pdfTeX, Version 3.14159265-2.6-1.40.16 (TeX Live 2015/Debian) (preloaded format=pdflatex 2017.9.5)  7 NOV 2017 17:24
 entering extended mode
  restricted \write18 enabled.
  %&-line parsing enabled.
@@ -560,11 +560,7 @@ File: ../img/hotColdDays.jpg Graphic file (type jpg)
 
 <use ../img/hotColdDays.jpg>
 Package pdftex.def Info: ../img/hotColdDays.jpg used on input line 24.
-(pdftex.def)             Requested size: 413.99895pt x 265.21797pt.
-
-Overfull \hbox (68.99895pt too wide) in paragraph at lines 24--25
- [][] 
- []
+(pdftex.def)             Requested size: 345.0pt x 221.01498pt.
 
 
 LaTeX Warning: `h' float specifier changed to `ht'.
@@ -586,7 +582,7 @@ cm/cmbx10.pfb></usr/share/texlive/texmf-dist/fonts/type1/public/amsfonts/cm/cmb
 x12.pfb></usr/share/texlive/texmf-dist/fonts/type1/public/amsfonts/cm/cmmi10.pf
 b></usr/share/texlive/texmf-dist/fonts/type1/public/amsfonts/cm/cmr10.pfb></usr
 /share/texlive/texmf-dist/fonts/type1/public/amsfonts/cm/cmsy10.pfb>
-Output written on hotCold.pdf (2 pages, 90388 bytes).
+Output written on hotCold.pdf (2 pages, 90382 bytes).
 PDF statistics:
  32 PDF objects out of 1000 (max. 8388607)
  21 compressed objects within 1 object stream
