@@ -21,8 +21,8 @@ for (k = 0; (unsigned)k < (year.size()-1); k++) {
 	
 	\begin{figure}[h]
 		\centering
-		\includegraphics[width=1.2\textwidth] {hotColdDays.jpg}
-		\caption{Plot of the warmest and coldest days for each year. 		Also a guassian fit for both.}
+		\includegraphics[width=1\textwidth] {hotColdDays.jpg}
+		\caption{Plot of the warmest and coldest days for each year. Also a guassian fit for both.}
 		\label{hotColdPlot}
 	\end{figure}
 \end{document}
